# rust-practice

taskmaster/: Cargo.toml
taskmaster/src/: cli.rs  lib.rs  main.rs  task.rs  task_list.rs  tasks.rs
taskmaster/src/cli/: command.rs  parser.rs
taskmaster/src/tasks/: task.rs  task_list.rs  task_storage.rs
taskmaster/tests/: cli_integration.rs
