[package]
name = "taskmaster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["std"] }
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
